fix(xudt-tag): wrong margin

--- a/src/pages/Xudt/styles.module.scss
+++ b/src/pages/Xudt/styles.module.scss
@@ -16,6 +16,10 @@
   width: 100%;
   display: flex;
   gap: 8px;
+
+  @media (width <= $mobileBreakPoint) {
+    margin-bottom: 16px;
+  }
 }
 
 .cardTitle {
@@ -49,9 +53,14 @@
 }
 
 .cardHeader {
+  height: 28px !important;
+  margin-top: 24px;
+  margin-bottom: 8px;
+
   @media (width <= $mobileBreakPoint) {
-    height: min-content;
-    padding: 8px 0 12px;
+    margin-top: 8px;
+    margin-bottom: 12px;
+    height: 17px !important;
   }
 }
 
